# mch-2025-cloudmosa

./: DEPLOYMENT.md  README.md  conversations.json  debug_postgres.sh  fix_postgres.sh  index.html  messages.json  pig.glb  users.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.postgres  README.md  alembic.ini  deploy.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 10a995db52d0_initial_complete_schema.py  28d3a60f6d2a_remove_sha256_from_file.py  3bfd86f21110_remove_object_key_column_from_files.py  99e09155289c_initial_schema_with_real_tables.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  minio.py
backend/app/crud/: __init__.py  applications.py  files.py  item.py  job_pictures.py  job_requirements.py  jobs.py  locations.py  profile.py  skills.py  user.py  user_skills.py
backend/app/models/: __init__.py  applications.py  base.py  conversation_participants.py  conversations.py  files.py  item.py  items.py  job_pictures.py  job_requirements.py  jobs.py  locations.py  messages.py  profiles.py  skills.py  user_skills.py  users.py
backend/app/router/: __init__.py  applications.py  auth.py  files.py  health.py  items.py  (+6 more)
backend/deploy-scripts/: fix_postgres.sh
backend/pgadmin-config/: init-pgadmin.sh  servers-prod.json  servers.json
backend/postgres-init/: 01-init.sql
backend/test/: files.http  test_auth.http  test_auth.py  test_job.http  test_locations.http  test_simple.py  test_skills.http  test_user_skills.http
(+61 files in other folders)
