[project]
name = "backend"
version = "0.1.0"
description = "[Project name] Backend API - A FastAPI-based backend server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "minio>=7.2.9",
    "pytest>=8.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
    "pgvector>=0.4.1",
]
